[Added] Product Endpoint service [Added] Event Listener [Added] Repository to App Structure [Added] Indexed db [FIX] APIType output concept [IMPROVE] Service Structure [IMPROME] Unit testing
